--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -4,9 +4,8 @@
 <head>
 <title>Home</title>
 <style>
- body {
-    font-family: 'PlayfairDisplayRegular', "Georgia", serif !important ;
-
+body {
+	font-family: 'PlayfairDisplayRegular', "Georgia", serif !important;
 }
 </style>
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
@@ -16,13 +15,17 @@
 	<div class="container">
 		<div th:replace="templates/templates::menu"></div>
 		<div class="jumbotron">
-        <h1>Navbar example</h1>
-        <p>This example is a quick exercise to illustrate how the default, static navbar and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-        <p>
-          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs »</a>
-        </p>
-      </div>
-      	<div th:replace="templates/templates::footer"></div>
+			<h1>Navbar example</h1>
+			<p>This example is a quick exercise to illustrate how the
+				default, static navbar and fixed to top navbar work. It includes the
+				responsive CSS and HTML, so it also adapts to your viewport and
+				device.</p>
+			<p>
+				<a class="btn btn-lg btn-primary" href="../../components/#navbar"
+					role="button">View navbar docs »</a>
+			</p>
+		</div>
+		<div th:replace="templates/templates::footer"></div>
 	</div>
 
 	<div th:replace="templates/templates::script"></div>
