--- a/src/main/webapp/WEB-INF/views/listCandidatePresident.html
+++ b/src/main/webapp/WEB-INF/views/listCandidatePresident.html
@@ -15,16 +15,18 @@ body {
 	background-color: #DC143C !important;
 	border-color: #DC143C !important;
 }
+
+.white, white:hover {
+	color: #fff;
+}
 </style>
 </head>
 <body>
 	<div class="container">
 		<div th:replace="templates/templates::menu"></div>
-<div sec:authorize="hasAuthority('ADMIN')">
-jestem adminem
-
-</div>
-		<button th:if="${#authorization.expression('hasAuthority(''Admin'')')}"
+		<div sec:authorize="hasAuthority('ADMIN')">jestem adminem</div>
+		<button
+			th:if="${#authorization.expression('hasAuthority(''Admin'')')}"
 			type="button" class="btn btn-primary pull-right red-button"
 			data-toggle="modal" data-target="#myModal">Dodaj Kandydata</button>
 		<table class="table table-hover table-striped table-bordered">
@@ -44,9 +46,12 @@ jestem adminem
 				<td th:text="${candidate.degree}">Zak</td>
 				<td th:text="${candidate.age}">Zak</td>
 				<td th:text="${candidate.partyMember}">Zak</td>
+				<td><a type="submit" class="btn btn-default red-button white "
+					th:href="@{/candidate/details/} + ${candidate.ID}">Idź do
+						kandydata</a></td>
 			</tbody>
 		</table>
-<!-- th:class="${#fields.hasErrors('degree')}? fieldError"  -->
+		<!-- th:class="${#fields.hasErrors('degree')}? fieldError"  -->
 
 		<div th:if="${#authorization.expression('hasAuthority(''Admin'')')}"
 			class="modal fade" id="myModal" tabindex="-1" role="dialog"
@@ -64,7 +69,7 @@ jestem adminem
 					<div class="modal-body">
 						<form method="post" role="form" th:object="${registerCandidate}"
 							th:action="sendCandidateData">
-							
+
 							<div class="form-group">
 								<label for="firstName">Imie</label> <input
 									th:field="${registerCandidate.firstName}" type="text"
@@ -79,23 +84,26 @@ jestem adminem
 								<div class="form-group">
 									<label for="degree">Wykształcenie</label> <input
 										th:field="${registerCandidate.degree}" type="text"
-										class="form-control" name="degree" 
+										class="form-control" name="degree"
 										placeholder="Podaj wykształcenie kandydata" />
 								</div>
 								<div class="form-group">
 									<label for="age">Podaj Wiek Kandydata</label> <input
 										th:field="${registerCandidate.age}" type="text"
-										class="form-control" name="age" 
-										
+										class="form-control" name="age"
 										placeholder="Podaj wiek kandydata" />
 								</div>
-										<div class="form-group">
-									<label for="partyMember">Podaj przynależność do partii</label> 
-									    <select class="form-control " th:field="${registerCandidate.partyName}">
-  										<option   th:each="party : ${politicalPartys}"  th:text="${party.partyName}" th:field="${registerCandidate.partyName}" th:value="${party.partyName}"></option>
-										</select>	
-										
-										
+								<div class="form-group">
+									<label for="partyMember">Podaj przynależność do partii</label>
+									<select class="form-control "
+										th:field="${registerCandidate.partyName}">
+										<option th:each="party : ${politicalPartys}"
+											th:text="${party.partyName}"
+											th:field="${registerCandidate.partyName}"
+											th:value="${party.partyName}"></option>
+									</select>
+
+
 								</div>
 							</div>
 							<div class="form-group">
