--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
 <title>Home</title>
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
@@ -9,33 +10,38 @@
 <body>
 	<div class="container">
 		<div th:replace="templates/templates::menu"></div>
-			<div class="row">
-		<div class="col-xs-6 col-xs-offset-3">
+		<div class="row">
+			<div class="col-xs-6 col-xs-offset-3">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<ol><li>By się zalogować podaj swój numer PESEL w polu o nazwie PESEL.</li> <li>W polu Hasło wpisz ustanowione przez siebie hasło.
-</li></ol>
+						<ol>
+							<li>By się zalogować podaj swój numer PESEL w polu o nazwie
+								PESEL.</li>
+							<li>W polu Hasło wpisz ustanowione przez siebie hasło.</li>
+						</ol>
 
 						<form method="post" role="form" th:action="@{/login}">
 							<div class="form-group">
-								<label for="exampleInputEmail1">PESEL</label> <input
-									type="text" class="form-control" id="exampleInputEmail1" name="pesel"
-									placeholder="PESEL"/>
+								<label for="exampleInputEmail1">PESEL</label> <input type="text"
+									class="form-control" id="exampleInputEmail1" name="pesel"
+									placeholder="PESEL" />
 							</div>
 							<div class="form-group">
 								<label for="exampleInputPassword1">Hasło</label> <input
-									type="password" class="form-control" id="exampleInputPassword1" name="password"
-									placeholder="Password"/>
+									type="password" class="form-control" id="exampleInputPassword1"
+									name="password" placeholder="Password" />
 							</div>
-							<button type="submit" class="btn btn-default"><i class="fa fa-sign-in"></i> Zaloguj</button>
+							<button type="submit" class="btn btn-default">
+								<i class="fa fa-sign-in"></i> Zaloguj
+							</button>
 						</form>
 
 					</div>
 				</div>
-				
+
+			</div>
+
 		</div>
-	
-	</div>
 	</div>
 
 	<div th:replace="templates/templates::script"></div>
