--- a/src/main/webapp/WEB-INF/views/politicalPartyCandidatesPresidents.html
+++ b/src/main/webapp/WEB-INF/views/politicalPartyCandidatesPresidents.html
@@ -16,12 +16,13 @@ body {
 	border-color: #DC143C !important;
 }
 
-.pointer{
-cursor: pointer;
+.pointer {
+	cursor: pointer;
 }
+
 .size-margin {
-margin-right: 33%;
-font-size: 20px;
+	margin-right: 33%;
+	font-size: 20px;
 }
 </style>
 </head>
@@ -29,7 +30,8 @@ font-size: 20px;
 	<div class="container">
 		<div th:replace="templates/templates::menu"></div>
 
-		<button th:if="${#authorization.expression('hasAuthority(''Admin'')')}"
+		<button
+			th:if="${#authorization.expression('hasAuthority(''Admin'')')}"
 			type="button" class="btn btn-primary pull-right red-button"
 			data-toggle="modal" data-target="#myModal">Dodaj Kandydata</button>
 		<table class="table table-hover table-striped table-bordered">
@@ -42,19 +44,27 @@ font-size: 20px;
 				</tr>
 			</thead>
 			<tbody th:each="candidate: ${candidatePartyPresident}">
-			<tr  >
-				<td th:text="${candidate.firstName}">Dawid</td>
-				<td th:text="${candidate.lastName}">Zak</td>
-				<td th:text="${candidate.partyMember}">Zak</td>
-				<td><span th:value="${candidate.ID}" th:attr="data-id=${candidate.ID}, data-firstName=${candidate.firstName}, data-lastName=${candidate.firstName}, data-partyMember=${candidate.partyMember}" class="glyphicon glyphicon-remove pointer size-margin open-AddBookDialog" data-toggle="modal" data-target="#myModal1" aria-hidden="true"></span><span  th:value="${candidate.ID}" th:attr="data-id=${candidate.ID}, data-firstName=${candidate.firstName}, data-lastName=${candidate.lastName}, data-partyMember=${candidate.partyMember}"  class="glyphicon glyphicon-pencil size-margin pointer edit" data-toggle="modal" data-target="#myModal2"  aria-hidden="true"></span> </td>
-			</tr>	
-				
-				
-				
+				<tr>
+					<td th:text="${candidate.firstName}">Dawid</td>
+					<td th:text="${candidate.lastName}">Zak</td>
+					<td th:text="${candidate.partyMember}">Zak</td>
+					<td><span th:value="${candidate.ID}"
+						th:attr="data-id=${candidate.ID}, data-firstName=${candidate.firstName}, data-lastName=${candidate.firstName}, data-partyMember=${candidate.partyMember}"
+						class="glyphicon glyphicon-remove pointer size-margin open-AddBookDialog"
+						data-toggle="modal" data-target="#myModal1" aria-hidden="true"></span><span
+						th:value="${candidate.ID}"
+						th:attr="data-id=${candidate.ID}, data-firstName=${candidate.firstName}, data-lastName=${candidate.lastName}, data-partyMember=${candidate.partyMember}"
+						class="glyphicon glyphicon-pencil size-margin pointer edit"
+						data-toggle="modal" data-target="#myModal2" aria-hidden="true"></span>
+					</td>
+				</tr>
+
+
+
 
 			</tbody>
 		</table>
-<!-- th:class="${#fields.hasErrors('degree')}? fieldError"  -->
+		<!-- th:class="${#fields.hasErrors('degree')}? fieldError"  -->
 
 		<div th:if="${#authorization.expression('hasAuthority(''Admin'')')}"
 			class="modal fade" id="myModal" tabindex="-1" role="dialog"
@@ -66,16 +76,18 @@ font-size: 20px;
 							aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						</button>
-						<h4 class="modal-title" id="myModalLabel">Dodaj Kandydata Na Przewodniczacego Partii</h4>
+						<h4 class="modal-title" id="myModalLabel">Dodaj Kandydata Na
+							Przewodniczacego Partii</h4>
 					</div>
 					<div class="modal-body">
-							<form method="post" role="form" 
-							th:action="politicalPartyCandidatesPresidentSend" th:object="${politicalPartyCandidateParty}">
-							
+						<form method="post" role="form"
+							th:action="politicalPartyCandidatesPresidentSend"
+							th:object="${politicalPartyCandidateParty}">
+
 							<div class="form-group">
 								<label for="firstName">Imie</label> <input
-									th:field="${politicalPartyCandidateParty.firstName}" type="text"
-									class="form-control" name="firstName"
+									th:field="${politicalPartyCandidateParty.firstName}"
+									type="text" class="form-control" name="firstName"
 									placeholder="Podaj imie kandydata" />
 							</div>
 							<div class="form-group">
@@ -83,14 +95,18 @@ font-size: 20px;
 									th:field="${politicalPartyCandidateParty.lastName}" type="text"
 									class="form-control" name="firstName"
 									placeholder="Podaj nazwisko kandydata" />
-										<div class="form-group">
-									<label for="partyMember">Podaj przynależność do partii</label> 
-									    <select class="form-control " th:field="${politicalPartyCandidateParty.partyMember}">
-  										<option th:each="party : ${politicalPartys}"  th:text="${party.partyName}" th:field="${politicalPartyCandidateParty.partyMember}" th:value="${party.partyName}"></option>
-										</select>	
-										
-										
-									
+								<div class="form-group">
+									<label for="partyMember">Podaj przynależność do partii</label>
+									<select class="form-control "
+										th:field="${politicalPartyCandidateParty.partyMember}">
+										<option th:each="party : ${politicalPartys}"
+											th:text="${party.partyName}"
+											th:field="${politicalPartyCandidateParty.partyMember}"
+											th:value="${party.partyName}"></option>
+									</select>
+
+
+
 								</div>
 							</div>
 							<div class="form-group">
@@ -117,26 +133,34 @@ font-size: 20px;
 							aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						</button>
-						<h4 class="modal-title" id="myModalLabel">Usun kandydata na prezydenta partii</h4>
+						<h4 class="modal-title" id="myModalLabel">Usun kandydata na
+							prezydenta partii</h4>
 					</div>
 					<div class="modal-body">
-							<form method="post" role="form" 
-							th:action="politicalPartyCandidatePresidentDelete" th:object="${politicalPartyCandidatePartyDelete}">
+						<form method="post" role="form"
+							th:action="politicalPartyCandidatePresidentDelete"
+							th:object="${politicalPartyCandidatePartyDelete}">
 							<div class="form-group">
-							<label for="ID">ID</label>
-							<input id="ID" type="text" class="form-control" value="" readonly="readonly" name="ID" placeholder="Podaj imie kandydata" />
+								<label for="ID">ID</label> <input id="ID" type="text"
+									class="form-control" value="" readonly="readonly" name="ID"
+									placeholder="Podaj imie kandydata" />
 							</div>
 							<div class="form-group">
-							<label for="firstName">Imie</label>
-							<input id="firstName" type="text" class="form-control"  th:field="${politicalPartyCandidatePartyDelete.firstName}" readonly="readonly" name="firstName" placeholder="Podaj imie kandydata" />
+								<label for="firstName">Imie</label> <input id="firstName"
+									type="text" class="form-control"
+									th:field="${politicalPartyCandidatePartyDelete.firstName}"
+									readonly="readonly" name="firstName"
+									placeholder="Podaj imie kandydata" />
 							</div>
 							<div class="form-group">
-							<label for="lastName">Nazwisko</label>
-							<input id="lastName" type="text" class="form-control" value="" readonly="readonly"  name="lastName" placeholder="Podaj imie kandydata" />
+								<label for="lastName">Nazwisko</label> <input id="lastName"
+									type="text" class="form-control" value="" readonly="readonly"
+									name="lastName" placeholder="Podaj imie kandydata" />
 							</div>
 							<div class="form-group">
-							<label for="party">Partia</label>
-							<input id="party" type="text" class="form-control" value="" readonly="readonly"  name="party" placeholder="Podaj imie kandydata" />
+								<label for="party">Partia</label> <input id="party" type="text"
+									class="form-control" value="" readonly="readonly" name="party"
+									placeholder="Podaj imie kandydata" />
 							</div>
 							<div class="form-group">
 								<button type="button" class="btn btn-default"
@@ -152,7 +176,7 @@ font-size: 20px;
 				</div>
 			</div>
 		</div>
-				<div th:if="${#authorization.expression('hasAuthority(''Admin'')')}"
+		<div th:if="${#authorization.expression('hasAuthority(''Admin'')')}"
 			class="modal fade" id="myModal2" tabindex="-1" role="dialog"
 			aria-labelledby="myModalLabel">
 			<div class="modal-dialog" role="document">
@@ -162,30 +186,38 @@ font-size: 20px;
 							aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						</button>
-						<h4 class="modal-title" id="myModalLabel">Edytuj Dane Kandydata Na Przewodniczącego  Partii</h4>
+						<h4 class="modal-title" id="myModalLabel">Edytuj Dane
+							Kandydata Na Przewodniczącego Partii</h4>
 					</div>
 					<div class="modal-body">
-							<form method="post" role="form" 
-							th:action="politicalPartyCandidatesPresidentEdit" th:object="${politicalPartyCandidatePartyEdit}">
+						<form method="post" role="form"
+							th:action="politicalPartyCandidatesPresidentEdit"
+							th:object="${politicalPartyCandidatePartyEdit}">
 							<div class="form-group">
-							<label for="ID">ID</label>
-							<input id="ID" type="text" class="form-control" value="" readonly="readonly" name="ID" placeholder="Podaj imie kandydata" />
+								<label for="ID">ID</label> <input id="ID" type="text"
+									class="form-control" value="" readonly="readonly" name="ID"
+									placeholder="Podaj imie kandydata" />
 							</div>
 							<div class="form-group">
-							<label for="firstName">Imie</label>
-							<input id="firstName" type="text" class="form-control"  th:field="${politicalPartyCandidatePartyDelete.firstName}" name="firstName" placeholder="Podaj imie kandydata" />
+								<label for="firstName">Imie</label> <input id="firstName"
+									type="text" class="form-control"
+									th:field="${politicalPartyCandidatePartyDelete.firstName}"
+									name="firstName" placeholder="Podaj imie kandydata" />
 							</div>
 							<div class="form-group">
-							<label for="lastName">Nazwisko</label>
-							<input id="lastName" type="text" class="form-control" value=""   name="lastName" placeholder="Podaj imie kandydata" />
+								<label for="lastName">Nazwisko</label> <input id="lastName"
+									type="text" class="form-control" value="" name="lastName"
+									placeholder="Podaj imie kandydata" />
 							</div>
 							<div class="form-group">
-							<label for="party">Partia</label>
-							
-							 <select class="form-control " th:field="${politicalPartyCandidateParty.partyMember}">
-  										<option th:each="party : ${politicalPartys}"  th:text="${party.partyName}" th:field="${politicalPartyCandidateParty.partyMember}" th:value="${party.partyName}"></option>
-										</select>	
-										</div>
+								<label for="party">Partia</label> <select class="form-control "
+									th:field="${politicalPartyCandidateParty.partyMember}">
+									<option th:each="party : ${politicalPartys}"
+										th:text="${party.partyName}"
+										th:field="${politicalPartyCandidateParty.partyMember}"
+										th:value="${party.partyName}"></option>
+								</select>
+							</div>
 							<div class="form-group">
 								<button type="button" class="btn btn-default"
 									data-dismiss="modal">Zamknij</button>
@@ -200,26 +232,24 @@ font-size: 20px;
 				</div>
 			</div>
 		</div>
-		
+
 		<div th:replace="templates/templates::footer"></div>
 	</div>
 	<div th:replace="templates/templates::script"></div>
 	<script>
+		$(document).on("click", ".open-AddBookDialog", function() {
+			$('input#ID.form-control').val($(this).data('id'))
+			$('input#firstName.form-control').val($(this).data('firstname'));
+			$('input#lastName.form-control').val($(this).data('lastname'));
+			$('input#party.form-control').val($(this).data('partymember'));
+		});
 
-	$(document).on("click", ".open-AddBookDialog", function () {
-	    $('input#ID.form-control').val($(this).data('id'))
-	    $('input#firstName.form-control').val($(this).data('firstname'));
-	    $('input#lastName.form-control').val($(this).data('lastname'));
-	    $('input#party.form-control').val($(this).data('partymember'));
-	});
-	
-	$(document).on("click", ".edit", function () {
-	    $('input#ID.form-control').val($(this).data('id'))
-	    $('input#firstName.form-control').val($(this).data('firstname'));
-	    $('input#lastName.form-control').val($(this).data('lastname'));
-	    $('input#party.form-control').val($(this).data('partymember'));
-	});
-
+		$(document).on("click", ".edit", function() {
+			$('input#ID.form-control').val($(this).data('id'))
+			$('input#firstName.form-control').val($(this).data('firstname'));
+			$('input#lastName.form-control').val($(this).data('lastname'));
+			$('input#party.form-control').val($(this).data('partymember'));
+		});
 	</script>
 </body>
 </html>
