--- a/src/main/webapp/WEB-INF/views/register.html
+++ b/src/main/webapp/WEB-INF/views/register.html
@@ -4,13 +4,12 @@
 <head>
 <title>Home</title>
 <style>
- body {
-    font-family: 'PlayfairDisplayRegular', "Georgia", serif !important ;
-
+body {
+	font-family: 'PlayfairDisplayRegular', "Georgia", serif !important;
 }
 
 .warning {
-border: 1px solid #DA1D1D;
+	border: 1px solid #DA1D1D;
 }
 </style>
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
@@ -19,102 +18,123 @@ border: 1px solid #DA1D1D;
 <body>
 	<div class="container">
 		<div th:replace="templates/templates::menu"></div>
-		<h2 class="text-center">Utwórz konto: </h2>
+		<h2 class="text-center">Utwórz konto:</h2>
 		<div class="text-center displayNone">
-		<i class="fa fa-refresh fa-spin red" style="font-size:5em;"></i>
+			<i class="fa fa-refresh fa-spin red" style="font-size: 5em;"></i>
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
-		<form method="POST" th:object="${registerUser}" action="addSubmit">
-      <div class="form-group">
-    <label for="firstName">Imie</label>
-    <input type="text" class="form-control firstNameErrorInput" th:field="${registerUser.firstName}" id="firstName" placeholder="Podaj swoje imie"/>
-    <td th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">Name Error</td>
-	<p class="firstNameError" style="display:none;">Podaj swoje imie</p>  
-  </div>
-    <div class="form-group">
-    <label for="lastName">Nazwisko</label>
-    <input type="text" class="form-control lastNameErrorInput" th:field="${registerUser.lastName}" id="lastName" placeholder="Podaj swoje nazwisko"/>
-  	<p class="lastNameError" style="display:none;">Podaj swoje nazwisko</p>  
-  </div>
-    <div class="form-group">
-    <label for="PESEL">PESEL</label>
-    <input type="text" class="form-control PESELErrorInput"  th:field="${registerUser.PESEL}" id="PESEL" placeholder="Podaj swój PESEL"/>
-	<p class="PESELError" style="display:none;">Podaj swoj PESEL</p>    
-  </div> 			
-  <div class="form-group">
-    <label for="email">Email address</label>
-    <input type="email" class="form-control emailErrorInput" th:field="${registerUser.email}" id="email" placeholder="Podaj swój email"/>
-  	<td th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Name Error</td>
-  	<p class="emailError" style="display:none;">Podaj swoj email</p>  
-  </div>
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input type="password" class="form-control passwordErrorInput" th:field="${registerUser.password}" id="password1" placeholder="Podaj swoje hasło"/>
-  	<p class="passwordError" style="display:none;">Podaj swoje hasło</p>  
-  </div>
-    <!-- <div class="form-group">
+				<form method="POST" th:object="${registerUser}" action="addSubmit">
+					<div class="form-group">
+						<label for="firstName">Imie</label> <input type="text"
+							class="form-control firstNameErrorInput"
+							th:field="${registerUser.firstName}" id="firstName"
+							placeholder="Podaj swoje imie" />
+						<td th:if="${#fields.hasErrors('firstName')}"
+							th:errors="*{firstName}">Name Error</td>
+						<p class="firstNameError" style="display: none;">Podaj swoje
+							imie</p>
+					</div>
+					<div class="form-group">
+						<label for="lastName">Nazwisko</label> <input type="text"
+							class="form-control lastNameErrorInput"
+							th:field="${registerUser.lastName}" id="lastName"
+							placeholder="Podaj swoje nazwisko" />
+						<p class="lastNameError" style="display: none;">Podaj swoje
+							nazwisko</p>
+					</div>
+					<div class="form-group">
+						<label for="PESEL">PESEL</label> <input type="text"
+							class="form-control PESELErrorInput"
+							th:field="${registerUser.PESEL}" id="PESEL"
+							placeholder="Podaj swój PESEL" />
+						<p class="PESELError" style="display: none;">Podaj swoj PESEL</p>
+					</div>
+					<div class="form-group">
+						<label for="email">Email address</label> <input type="email"
+							class="form-control emailErrorInput"
+							th:field="${registerUser.email}" id="email"
+							placeholder="Podaj swój email" />
+						<td th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Name
+							Error</td>
+						<p class="emailError" style="display: none;">Podaj swoj email</p>
+					</div>
+					<div class="form-group">
+						<label for="password">Password</label> <input type="password"
+							class="form-control passwordErrorInput"
+							th:field="${registerUser.password}" id="password1"
+							placeholder="Podaj swoje hasło" />
+						<p class="passwordError" style="display: none;">Podaj swoje
+							hasło</p>
+					</div>
+					<!-- <div class="form-group">
     <label for="date">Data Urodzenia</label>
     <input type="date" class="form-control" id="date" placeholder="Data urodzenia"/>
   	</div>  -->
-    <div class="form-group">
-    <label for="region">Województwo</label>
-    <select class="form-control regionErrorInput" th:field="${registerUser.IdD}">
-  <option   th:each="region : ${regions}"  th:text="${region.regionName}" th:field="${registerUser.IdD}" th:value="${region.id}"></option>
-</select>
- 	<p class="regionError" style="display:none;">Wybierz wojewodztwo</p>  
-  </div>
-    <div class="form-group">
-    <label for="exampleInputPassword1">Miasto</label>
-    <input type="text" class="form-control cityErrorInput" id="exampleInputPassword1" th:field="${registerUser.city}" placeholder="Password"/>
-  	<p class="cityError" style="display:none;">Podaj miasto</p>  
-  	
-  </div>
-  <input type="hidden" th:name="${_csrf.parameterName}" id="csrfHeader" th:value="${_csrf.headerName}"/>
-  
-   <input type="hidden" th:name="${_csrf.parameterName}" id="csrfToken" th:value="${_csrf.token}" />
-  <div class="form-group">
-  <button type="submit" class="btn btn-default" >Zarejestruj</button>
-  </div>
-  </form>
-  </div>
-  </div>
-      	<div th:replace="templates/templates::footer"></div>
+					<div class="form-group">
+						<label for="region">Województwo</label> <select
+							class="form-control regionErrorInput"
+							th:field="${registerUser.IdD}">
+							<option th:each="region : ${regions}"
+								th:text="${region.regionName}" th:field="${registerUser.IdD}"
+								th:value="${region.id}"></option>
+						</select>
+						<p class="regionError" style="display: none;">Wybierz
+							wojewodztwo</p>
+					</div>
+					<div class="form-group">
+						<label for="exampleInputPassword1">Miasto</label> <input
+							type="text" class="form-control cityErrorInput"
+							id="exampleInputPassword1" th:field="${registerUser.city}"
+							placeholder="Password" />
+						<p class="cityError" style="display: none;">Podaj miasto</p>
+
+					</div>
+					<input type="hidden" th:name="${_csrf.parameterName}"
+						id="csrfHeader" th:value="${_csrf.headerName}" /> <input
+						type="hidden" th:name="${_csrf.parameterName}" id="csrfToken"
+						th:value="${_csrf.token}" />
+					<div class="form-group">
+						<button type="submit" class="btn btn-default">Zarejestruj</button>
+					</div>
+				</form>
+			</div>
+		</div>
+		<div th:replace="templates/templates::footer"></div>
 	</div>
 
 	<div th:replace="templates/templates::script"></div>
-	<p class='firstNameError' style='display:none;'>kurwa</p>
-<script>
-$( "button" ).on( "click", function(event) {
-	var token = $("#csrfToken").attr("value");
-	var header = $("#csrfHeader").attr("value");
-	var spinner = $('.displayNone')
-	event.preventDefault();
-	$.ajax({
-		type: "POST",
-	    url : "addSubmit",
-        beforeSend: function (xhr) {
-		xhr.setRequestHeader(header, token);
-		spinner.css('display','block');
-		},
-	    data:$('form').serialize() ,
-	   	success : function(data){   
-	   		$.each( data, function( key, value ) {
-	   		  alert( key + ": " + value );
-	   		  $('.'+value+'Error').css( "display", "block" )
-	   		  $('.'+value+'ErrorInput').css({
-	   			border: "1px solid #DA1D1D",
-     			 fontWeight: "700"
-    			});	
-	   		});
-	    },
-	    complete: function(){
-	    	spinner.css('display','none');	
-	    }
-		
-	});
-	});
-		
-</script>
+	<p class='firstNameError' style='display: none;'>kurwa</p>
+	<script>
+		$("button").on("click", function(event) {
+			var token = $("#csrfToken").attr("value");
+			var header = $("#csrfHeader").attr("value");
+			var spinner = $('.displayNone')
+			event.preventDefault();
+			$.ajax({
+				type : "POST",
+				url : "addSubmit",
+				beforeSend : function(xhr) {
+					xhr.setRequestHeader(header, token);
+					spinner.css('display', 'block');
+				},
+				data : $('form').serialize(),
+				success : function(data) {
+					$.each(data, function(key, value) {
+						alert(key + ": " + value);
+						$('.' + value + 'Error').css("display", "block")
+						$('.' + value + 'ErrorInput').css({
+							border : "1px solid #DA1D1D",
+							fontWeight : "700"
+						});
+					});
+				},
+				complete : function() {
+					spinner.css('display', 'none');
+				}
+
+			});
+		});
+	</script>
 </body>
 </html>
