--- a/src/main/webapp/WEB-INF/views/templates/templates.html
+++ b/src/main/webapp/WEB-INF/views/templates/templates.html
@@ -1,176 +1,310 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <head>
-<meta charset="UTF-8"/>
+<meta charset="UTF-8" />
 <title>Insert title here</title>
 <style>
 body {
-    font-family: 'PlayfairDisplayRegular', "Georgia", serif !important;
-    }
-	
-.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
-    color: #555 !important;
-    background-color: #EF0A0A !important;
-	}
-	
-	.navbar-default {
+	font-family: 'PlayfairDisplayRegular', "Georgia", serif !important;
+}
+
+.nav-tabs {
+	border-bottom: 2px solid red !important;
+}
+
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus,
+	.navbar-default .navbar-nav>.active>a:hover {
+	color: #555 !important;
+	background-color: #EF0A0A !important;
+}
+
+.navbar-default {
 	background-color: inherit;
-    border-color: white;
-	}
-	
-	.red-button, red-button:hover {
+	border-color: white;
+}
+
+.red-button, red-button:hover {
 	background-color: #DC143C !important;
 	border-color: #DC143C !important;
-	
-	
 }
-.alpha{
-display:flex !important;
-float:right;
-margin-top:110px;
+
+.alpha {
+	display: flex !important;
+	float: right;
+	margin-top: 110px;
 }
+
 .navbar-default .navbar-nav>li>a:hover {
-color: #DC143C !important;
+	color: #DC143C !important;
 }
 </style>
-<link th:fragment="link" th:href="@{/resources/css/main.css}" rel="stylesheet" />
-<link th:fragment="link" th:href="@{/resources/bootstrap/bootstrap-3.3.5-dist/css/bootstrap.min.css}" rel="stylesheet" />
-<link th:fragment="link" th:href="@{/resources/font-awesome/font-awesome-4.4.0/css/font-awesome.min.css}" rel="stylesheet" />
-<link th:fragment="link" th:href="@{/resources/other/bootstrapValidator.min.css}" rel="stylesheet" />
+<link th:fragment="link" th:href="@{/resources/css/main.css}"
+	rel="stylesheet" />
+<link th:fragment="link"
+	th:href="@{/resources/bootstrap/bootstrap-3.3.5-dist/css/bootstrap.min.css}"
+	rel="stylesheet" />
+<link th:fragment="link"
+	th:href="@{/resources/font-awesome/font-awesome-4.4.0/css/font-awesome.min.css}"
+	rel="stylesheet" />
+<link th:fragment="link"
+	th:href="@{/resources/other/bootstrapValidator.min.css}"
+	rel="stylesheet" />
 
 </head>
 <body>
 
-<div th:fragment="menu">
+	<div th:fragment="menu">
 
-<img th:src="@{/resources/photos/Herb_Polski.svg}" style="height:10em; margin-top: 10px;" alt="..."></img>
-      <p style="display: inline-block; margin-left: 20px; font-size: 4em;">wybory.gov.pl</p>
-      <div class="alpha"  style="display: flex; float:right; margin-top:110px;"><p >Twój PESEL:  </p>
-      <div sec:authentication="name"></div></div>
-      <nav class="navbar navbar-default upperCase">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul  class="nav navbar-nav">
-              <!-- Doczytac co oznacza # -->	
-              <li class="active"><a href="/dzejk" class="red-button"><i class="fa fa-home fa-lg"></i> Strona główna</a></li>
-              <li ><a href="/dzejk/politicalParty" >Lista partii politycznych</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Lista kandydatów na...<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="/dzejk/candidate/listPresident">Prezydenta</a></li>
-                  <li><a href="/dzejk/candidate/politicalPartyPresident">Przewodniczącego Partii</a></li>
-                  <li><a href="#">Głosującego</a></li>
-                </ul>
-              </li>
-                 <li th:if="${#authorization.expression('hasRole(''Admin'')')}" class="dropdown">
-                <a  href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dodaj kandydatów...<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="/dzejk/listCandidatePresident" class="red">Prezydenta</a></li>
-                  <li><a href="/dzejk/politicalPartyCandidatesPresident">Przewodniczącego Partii</a></li>
-                  <li><a href="#">Głosującego</a></li>
-                </ul>
-              </li>
-              <li><a href="list">Nadchodzące wybory</a></li>
-            </ul>
- 
-            <ul class="nav navbar-nav navbar-right">
-              <li  th:switch="${#authorization.expression('isAuthenticated()')}" class="active">
-              	<a th:case="false" href="/dzejk/login"><i class="fa fa-sign-in fa-lg"></i> Zaloguj <span class="sr-only">(current)</span></a>
-              	<form th:case="true" method="post" th:action="@{/logout}">
-              	<button type="submit" class="btn btn-default"><i class="fa fa-sign-in fa-lg fa-rotate-180"></i> Wyloguj <span class="sr-only">(current)</span></button></form>
-              	</li>
-              <li th:switch="${#authorization.expression('isAuthenticated()')}" >
-              <a th:case="false" href="/dzejk/register"><i class="fa fa-user-plus fa-lg"></i> Zarejestruj</a>
-              <a th:case="true" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" ><i class="fa fa-cog" aria-hidden="true"></i>
-              Ustawienia</a>
-              <ul class="dropdown-menu">
-              <li><a data-toggle="modal" data-target=".bs-example-modal-lg">Dane podstawowe</a> </li>
-              <li><a href="/dzejk/setings">Opis</a> </li>
-              </ul></li>
-              <li><a href="../navbar-fixed-top/"><i class="fa fa-info fa-lg"></i> O stronie</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-      </nav>
-      <span th:text="${#authorization.expression('isAuthenticated()')} ? 
+		<img th:src="@{/resources/photos/Herb_Polski.svg}"
+			style="height: 10em; margin-top: 10px;" alt="..."></img>
+		<p style="display: inline-block; margin-left: 20px; font-size: 4em;">wybory.gov.pl</p>
+		<div class="alpha"
+			style="display: flex; float: right; margin-top: 110px;">
+			<p>Twój PESEL:</p>
+			<div sec:authentication="name"></div>
+		</div>
+		<nav class="navbar navbar-default upperCase">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed"
+						data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+						aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span> <span
+							class="icon-bar"></span> <span class="icon-bar"></span> <span
+							class="icon-bar"></span>
+					</button>
+				</div>
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<!-- Doczytac co oznacza # -->
+						<li class="active"><a href="/dzejk" class="red-button"><i
+								class="fa fa-home fa-lg"></i> Strona główna</a></li>
+						<li><a href="/dzejk/politicalParty">Lista partii
+								politycznych</a></li>
+						<li class="dropdown"><a href="#" class="dropdown-toggle"
+							data-toggle="dropdown" role="button" aria-haspopup="true"
+							aria-expanded="false">Lista kandydatów na...<span
+								class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="/dzejk/candidate/listPresident">Prezydenta</a></li>
+								<li><a href="/dzejk/candidate/politicalPartyPresident">Przewodniczącego
+										Partii</a></li>
+								<li><a href="#">Głosującego</a></li>
+							</ul></li>
+						<li th:if="${#authorization.expression('hasRole(''Admin'')')}"
+							class="dropdown"><a href="#" class="dropdown-toggle"
+							data-toggle="dropdown" role="button" aria-haspopup="true"
+							aria-expanded="false">Dodaj kandydatów...<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="/dzejk/listCandidatePresident" class="red">Prezydenta</a></li>
+								<li><a href="/dzejk/politicalPartyCandidatesPresident">Przewodniczącego
+										Partii</a></li>
+								<li><a href="#">Głosującego</a></li>
+							</ul></li>
+						<li><a href="list">Nadchodzące wybory</a></li>
+					</ul>
+
+					<ul class="nav navbar-nav navbar-right">
+						<li th:switch="${#authorization.expression('isAuthenticated()')}"
+							class="active"><a th:case="false" href="/dzejk/login"><i
+								class="fa fa-sign-in fa-lg"></i> Zaloguj <span class="sr-only">(current)</span></a>
+							<form th:case="true" method="post" th:action="@{/logout}">
+								<button type="submit" class="btn btn-default">
+									<i class="fa fa-sign-in fa-lg fa-rotate-180"></i> Wyloguj <span
+										class="sr-only">(current)</span>
+								</button>
+							</form></li>
+						<li th:switch="${#authorization.expression('isAuthenticated()')}">
+							<a th:case="false" href="/dzejk/register"><i
+								class="fa fa-user-plus fa-lg"></i> Zarejestruj</a> <a th:case="true"
+							href="#" class="dropdown-toggle" data-toggle="dropdown"
+							role="button"><i class="fa fa-cog" aria-hidden="true"></i>
+								Ustawienia</a>
+							<ul class="dropdown-menu">
+								<li><a data-toggle="modal"
+									data-target=".bs-example-modal-lg">Dane podstawowe</a></li>
+								<li><a href="/dzejk/setings">Opis</a></li>
+							</ul>
+						</li>
+						<li><a href="../navbar-fixed-top/"><i
+								class="fa fa-info fa-lg"></i> O stronie</a></li>
+					</ul>
+				</div>
+				<!--/.nav-collapse -->
+			</div>
+			<!--/.container-fluid -->
+		</nav>
+		<span
+			th:text="${#authorization.expression('isAuthenticated()')} ? 
                'the user is logged in' : 
                'the user is NOT logged in'">
-</span>
-<div sec:authentication="name">
-    The value of the "name" property of the authentication object should appear here.
-</div>
+		</span>
+		<div sec:authentication="name">The value of the "name" property
+			of the authentication object should appear here.</div>
 
- <div th:if="${#authorization.expression('hasAuthority(''Admin'')')}">
-        This will only be displayed if authenticated user has role ROLE_ADMIN.
-    </div>
-</div>
-<div th:fragment="footer">
-<div class="row">
-    <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img th:src="@{/resources/photos/Sejm_Logo.jpg}"  alt="..."/>
-    </a>
-  </div>
-    <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img th:src="@{/resources/photos/Senat_Logo.jpg}"  alt="..."/>
-    </a>
-  </div>
-    <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img th:src="@{/resources/photos/Monitor_Polski.jpg}" alt="..."/>
-    </a>
-  </div>
-    <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img th:src="..." alt="..."/>
-    </a>
-  </div>
-	<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      ...
-    </div>
-  </div>
-</div>
-	
-</div>
-  <div class="footerInfo">
-  <ul>
-  	<li><a href="/dzejk/api/PresidentCandidate">API for Developers</a></li>
-  </ul>
-  </div>
-</div>
-    <script th:fragment="script" th:src="@{/resources/jquery/jquery-1.11.3.min.js}"></script>
-	<script th:fragment="script" th:src="@{/resources/bootstrap/bootstrap-3.3.5-dist/js/bootstrap.min.js}"></script>
-	<script th:fragment="script" th:src="@{/resources/other/bootstrapValidator.min.js}"></script>
+		<div th:if="${#authorization.expression('hasAuthority(''Admin'')')}">
+			This will only be displayed if authenticated user has role
+			ROLE_ADMIN.</div>
+	</div>
+	<div th:fragment="footer">
+		<div class="row">
+			<div class="col-xs-6 col-md-3">
+				<a href="#" class="thumbnail"> <img
+					th:src="@{/resources/photos/Sejm_Logo.jpg}" alt="..." />
+				</a>
+			</div>
+			<div class="col-xs-6 col-md-3">
+				<a href="#" class="thumbnail"> <img
+					th:src="@{/resources/photos/Senat_Logo.jpg}" alt="..." />
+				</a>
+			</div>
+			<div class="col-xs-6 col-md-3">
+				<a href="#" class="thumbnail"> <img
+					th:src="@{/resources/photos/Monitor_Polski.jpg}" alt="..." />
+				</a>
+			</div>
+			<div class="col-xs-6 col-md-3">
+				<a href="#" class="thumbnail"> <img th:src="..." alt="..." />
+				</a>
+			</div>
+			<div class="modal fade bs-example-modal-lg" tabindex="-1"
+				role="dialog" aria-labelledby="myLargeModalLabel">
+				<div class="modal-dialog modal-lg">
+					<div class="modal-content">
+						<div>
+
+							<!-- Nav tabs -->
+							<ul class="nav nav-tabs" role="tablist">
+								<li role="presentation" class="active"><a href="#home"
+									aria-controls="home" role="tab" data-toggle="tab">Dane
+										Podstawowe</a></li>
+								<li role="presentation"><a href="#profile"
+									aria-controls="profile" role="tab" data-toggle="tab">Konto</a></li>
+								<li role="presentation"><a href="#messages"
+									aria-controls="messages" role="tab" data-toggle="tab">Opis</a></li>
+								<li role="presentation"><a href="#settings"
+									aria-controls="settings" role="tab" data-toggle="tab">Informacje</a></li>
+							</ul>
+
+							<!-- Tab panes -->
+							<div class="tab-content">
+								<div role="tabpanel" class="tab-pane active" id="home">
+									...1
+									<div class="bs-example bs-example-type"
+										data-example-id="simple-headings">
+										<table class="table">
+											<tbody>
+												<tr>
+													<td><h1>h1. Bootstrap heading</h1></td>
+													<td class="type-info">Semibold 36px</td>
+												</tr>
+												<tr>
+													<td><h2>h2. Bootstrap heading</h2></td>
+													<td class="type-info">Semibold 30px</td>
+												</tr>
+												<tr>
+													<td><h3>h3. Bootstrap heading</h3></td>
+													<td class="type-info">Semibold 24px</td>
+												</tr>
+												<tr>
+													<td><h4>h4. Bootstrap heading</h4></td>
+													<td class="type-info">Semibold 18px</td>
+												</tr>
+												<tr>
+													<td><h5>h5. Bootstrap heading</h5></td>
+													<td class="type-info">Semibold 14px</td>
+												</tr>
+												<tr>
+													<td><h6>h6. Bootstrap heading</h6></td>
+													<td class="type-info">Semibold 12px</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+
+
+								</div>
+								<div role="tabpanel" class="tab-pane" id="profile">...2</div>
+								<div role="tabpanel" class="tab-pane" id="messages">...3</div>
+								<div role="tabpanel" class="tab-pane" id="settings">...4</div>
+							</div>
+
+						</div>
+						<p>test</p>
+						<form class="form-horizontal">
+							<div class="form-group">
+								<label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+								<div class="col-sm-10">
+									<input type="email" class="form-control" id="inputEmail3"
+										placeholder="Email" />
+									<p id="email"></p>
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="inputPassword3" class="col-sm-2 control-label">Miejscowość:</label>
+								<div class="col-sm-10">
+									<input type="password" class="form-control" id="inputPassword3"
+										placeholder="Password" />
+									<p id="city"></p>
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="col-sm-offset-2 col-sm-10">
+									<div class="checkbox"></div>
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="col-sm-offset-2 col-sm-10">
+									<button type="submit" class="btn btn-default">Sign in</button>
+								</div>
+							</div>
+						</form>
+
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+	<div class="footerInfo" th:fragment="footer">
+		<ul>
+			<li><a href="/dzejk/api/PresidentCandidate">API for
+					Developers</a></li>
+		</ul>
+	</div>
+
+	<script th:fragment="script"
+		th:src="@{/resources/jquery/jquery-1.11.3.min.js}"></script>
+	<script th:fragment="script"
+		th:src="@{/resources/bootstrap/bootstrap-3.3.5-dist/js/bootstrap.min.js}"></script>
+	<script th:fragment="script"
+		th:src="@{/resources/other/bootstrapValidator.min.js}"></script>
 	<script>
-	$('.navbar-right li > a').on('click', function() {
-	     //alert("Dsadsadsad");
-	 var val = $('.alpha div').text();
-	  $.ajax({
-	     type: "GET",
-	     url: "editUserInfo",
-	     data: { pesel: val}, // parameters
-	     success: function(){
-	    	 
-	    	 alert("dasdasdas")
-	     },
-	     error: function(){
-	    	alert("errror") 
-	    	 
-	     }
-	  })
-	});
+		$('.navbar-right li > a').on('click', function() {
+			//alert("Dsadsadsad");
+			var val = $('.alpha div').text();
+			$.ajax({
+				type : "GET",
+				url : "editUserInfo",
+				data : {
+					pesel : val
+				}, // parameters
+				success : function(data) {
+
+					console.dir(data);
+					console.log(data.firstName);
+					$('#email').text(data.email);
+					$('#city').text(data.city);
+				},
+				error : function() {
+					alert("errror")
+
+				}
+			})
+		});
 	</script>
 </body>
 </html>
